<resources>
    <string name="app_name">i-ZheJiang</string>
    <string name="appkey">10001000</string>
    <string name="secret">513add10608f815f4d7eaf7c6376097b</string>
    <string name="register_name_digits">.!@#$%0^1*()_-+={}[]?/,23456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="help_title">帮手</string>
    <string name="arround_title">身边</string>
    <string name="application_title">应用</string>
    <string name="my_title">我的</string>
    <string name="push_nomesage">您还没有消息</string>
    <string name="ssid_title">热点</string>
    <string name="text_sign">签到</string>
    <string name="text_near">附近热点</string>
    <string name="text_message">我的消息</string>
    <string name="text_share">分享应用</string>
    <string name="wifi_chinanet">官方网络 无需密码</string>
    <string name="wifi_union">联盟网络 无需密码</string>
    <string name="wifi_otherpassword">未知网络 需要密码</string>
    <string name="wifi_othernopassword">未知网络 无需密码</string>
    <string name="connect_first">正在验证身份...</string>
    <string name="connect_second">正在获取IP...</string>
    <string name="connect_ok">连接成功</string>
    <string name="connect_fail">连接失败</string>
    <string name="btn_connect">重新连接</string>
    <string name="btn_disconnect">断开连接</string>
    <string name="login_title">用户登录</string>
    <string name="regist_title">i-Zhejiang</string>
    <string name="regist_text">用户注册</string>
    <string name="regist_user">用户名</string>
    <string name="regist_phone">手机号码</string>
    <string name="regist_mesage">验证码</string>
    <string name="regist_commit">提交</string>
    <string name="msg_recomend">输入短信验证码后，刚才设置的密码才会生效。</string>
    <string name="phone_recomend">点此按钮后，软件会向中国电信客服电话拨打一次通话，接通后请按照语音提示操作</string>
    <string name="aplication_find">发现应用</string>
    <string name="mylogin">登录</string>
    <string name="mytimes">累计时长</string>
    <string name="myjifen">积分</string>
    <string name="mylevel">等级</string>
    <string name="myphone">手机</string>
    <string name="myname">昵称</string>
    <string name="myemail">邮箱</string>
    <string name="bangding_name">绑定 昵称</string>
    <string name="email_sucess">已经发送一封邮件，到您所填写的邮箱，请查收邮箱</string>
    <string name="change_yanzhengma">看不清楚，换一张</string>
    <string name="write_yanzhengma">请输入正确的验证码</string>
    <string name="share_text">我太善良，发现好东西不能不分享。出门在外，用爱浙江免费WIFI，不仅免费上网，而且中国电信安全保证，根本停不下来。</string>
    <string name="nick_hint">4-30个字符,支持中英文,数字</string>
    <string name="open_wifi">请打开wifi</string>
    <string name="weit_location">正在定位...</string>
    <string name="conect_off">暂时无法连接上，请检查网络状态</string>
    <string name="net_off">请检查网络状态</string>
    <string name="phone_null">手机号不能为空</string>
    <string name="username_null">手机号或邮箱不能为空</string>
    <string name="comment_sucess">评论成功</string>
    <string name="comment_null">评论不能为空</string>
    <string name="nick_null">昵称不能为空</string>
    <string name="email_null">邮箱不能为空</string>
    <string name="msg_null">验证码不能为空</string>
    <string name="password_null">密码不能为空</string>
    <string name="nick_wrong">昵称长度4-20个字符之间</string>
    <string name="email_wrong">请输入正确的邮箱</string>
    <string name="phone_wrong">请输入正确的手机号</string>
    <string name="phone_exist">手机号已被注册</string>
    <string name="username_exist">用户名已被注册</string>
    <string name="wait_code">正在获取验证码</string>
    <string name="wait_login">正在登录</string>
    <string name="fail_code">获取手机验证码失败</string>
    <string name="fail_password">重置密码失败</string>
    <string name="sucess_password">重置密码成功</string>
    <string name="fail_checkcode">手机验证码认证失败</string>
    <string name="fail_commit">注册失败</string>
    <string name="fail_login">登录失败</string>
    <string name="sucess_login">登录成功</string>
    <string name="sucess_code">获取手机验证码成功</string>
    <string name="sucess_commit">注册成功</string>
    <string name="passord_wrong">密码长度为6-20位，请重新输入</string>
    <string name="passord_diffrent">密码两次输入不一致</string>
    <string name="tiaokuan_wrong">请勾选条款</string>
    <string name="password_illegal">密码不能使用中文</string>
    <string name="str_tv_loading_text">正在加载…</string>
    <string name="str_tv_get_data_err_text">加载失败，点击重新加载</string>
    <string name="str_tv_no_data_text">暂无数据，点击重新获取</string>
    <string name="hello">Hello World, TestAndroidActivity!</string>
    <string name="app_describe">非常感谢您们的支持！我们共同学习！ 网址：http://www.thinkandroid.cn。qq群：169415162</string>
    <string name="thinkandroid_main_title">ThinkAndroid Main</string>
    <string name="thinkandroid_db_title">ThinkAndroid 数据库操作模块</string>
    <string name="thinkandroid_cache_title">ThinkAndroid 缓存模块</string>
    <string name="thinkandroid_image_cache_title">ThinkAndroid 图片缓存模块</string>
    <string name="thinkandroid_mvc_title">ThinkAndroid MVC模块</string>
    <string name="thinkandroid_http_title">ThinkAndroid Http模块</string>
    <string name="thinkandroid_download_title">ThinkAndroid 下载器模块模块</string>
    <string name="thinkandroid_simple_download_title">ThinkAndroid 第一种简单模块模块</string>
    <string name="thinkandroid_simple_two_download_title">ThinkAndroid 第二种简单模块模块</string>
    <string name="thinkandroid_test_other_title">几个简单的工具</string>
    <string name="test_db">数据库模块</string>
    <string name="test_cache">缓存模块</string>
    <string name="test_image_cache">图片缓存模块</string>
    <string name="test_mvc">MVC模块</string>
    <string name="test_http">http模块</string>
    <string name="test_download">下载器模块</string>
    <string name="test_other">测试其他工具</string>
    <string name="exit_app">退出应用程序</string>
    <string name="insert_data">插入数据</string>
    <string name="delete_data">删除数据</string>
    <string name="update_data">更新数据</string>
    <string name="select_data">查询数据</string>
    <string name="show_data">显示数据</string>
    <string name="test_simple_down">单线程 简单下载器之一</string>
    <string name="test_simple_down_two">单线程 简单下载器之二</string>
    <string name="test_multi_thread_down">多线程下载</string>
    <string name="test_configure">测试配置器</string>
    <string name="test_resoperate">测试资源读取</string>
    <string name="test_comparator">测试任意对象比较器</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="thinkandroidmainactivity">ThinkAndroidMainActivity</string>
    <string name="thinkandroiddbactivtiy">ThinkAndroidDBActivtiy</string>
    <string name="thinkandroidcacheactivtiy">ThinkAndroidCacheActivtiy</string>
    <string name="thinkandroidimagecacheactivtiy">ThinkAndroidImageCacheActivtiy</string>
    <string name="thinkandroidmvcactivtiy">ThinkAndroidMvcActivtiy</string>
    <string name="thinkandroidhttpactivtiy">ThinkAndroidHttpActivtiy</string>
    <string name="thinkandroiddwonloadactivtiy">ThinkAndroidDwonLoadActivtiy</string>
    <string name="thinkandroidmultithreaddwonloadactivtiy">ThinkAndroidMultiThreadDwonLoadActivtiy</string>
    <string name="thinkandroidsimpledwonloadactivtiy">ThinkAndroidSimpleDwonLoadActivtiy</string>
    <string name="thinkandroidsimpletwodwonloadactivtiy">ThinkAndroidSimpleTwoDwonLoadActivtiy</string>
    <string name="thinkandroidotheractivtiy">ThinkAndroidOtherActivtiy</string>
    <string name="registactivity">RegistActivity</string>
    <string name="loginactivity">LoginActivity</string>
    <string name="countrylistactivity">CountryListActivity</string>
    <string name="registfirstactivity">RegistFirstActivity</string>
    <string name="registsecondactivity">RegistSecondActivity</string>
    <string name="personinfomationactivity">PersonInfomationActivity</string>
    <string name="showimageactivity">ShowImageActivity</string>
    <string name="testmvccommand">TestMVCCommand</string>
    <string name="sendmsgcommand">SendMsgCommand</string>
    <string name="logincommand">LoginCommand</string>
    <string name="instapager_login_html" formatted="false">&lt;!DOCTYPE html> &lt;html> &lt;head> &lt;meta content=\"text/html; charset=utf-8\" http-equiv=\"Content-Type\"> &lt;meta content=\"width=device-width,minimum-scale=1,maximum-scale=1,initial-scale=1,user-scalable=no\" id=\"viewport\" name=\"viewport\"> &lt;meta content=\"yes\" name=\"apple-mobile-web-app-capable\"> &lt;title>%s&lt;/title> &lt;style type=\"text/css\"> body{margin:0;padding:0} .inputstyle { -webkit-tap-highlight-color:rgba(255,255,255,0); width:100%%; height:44px; color:#000; background:0; border:0; font-size:16px; outline: none; -webkit-appearance:none } .btn { width:90%%; height:44px; line-height:44px; background:#A0C035; border:0; border-radius:4px; color:#fff; font-size:16px; text-align:center; margin-top:15px; display:block } .btn:disabled { background: #dddddd; } .error { color:red; } &lt;/style> &lt;/head> &lt;body> &lt;script type=\"text/javascript\"> function login(form){ var u=form[\"u\"].value,p=form[\"p\"].value; if(!u || !p) return false; form[\"s\"].disabled = true; return true; } &lt;/script> &lt;form style=\"margin-top:45px;\" action=\"%s\" metho=\"get\" onsubmit=\"return login(this);\"> %s &lt;div style=\"padding-left:15px;border-top:1px solid #E3E3E5;border-bottom:1px solid #E3E3E5;\"> &lt;input type=\"hidden\" name=\"ID_SIGN\" value=\"OWELJSFPWECSFEW\"/> &lt;input class=\"inputstyle\" id=\"u\" name=\"u\" type=\"text\" value=\"%s\" placeholder=\"%s\" style=\"border-bottom:1px solid #E3E3E5;\"/> &lt;input class=\"inputstyle\" id=\"p\" name=\"p\" type=\"password\" placeholder=\"%s\"/> &lt;/div> &lt;p>&lt;input style=\"margin:0 auto;\" type=\"submit\" name=\"s\" value=\" %s \" class=\"btn\"/>&lt;/p> &lt;/form> &lt;/body> &lt;/html></string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="share_to">分享到</string>
    <string name="share">分享</string>
    <string name="multi_share">图文分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="list_friends">%s的朋友</string>
    <string name="share_failed">分享失败</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">刷新中…</string>
    <string name="shake2share">摇晃手机！</string>
    <string name="select_a_friend">请选择一个朋友</string>
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="website">http://www.mob.com</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="yixin_client_inavailable">目前您的易信版本过低或未安装，需要安装易信才能使用</string>
    <string name="line_client_inavailable">目前您的Line版本过低或未安装，需要安装Line才能使用</string>
    <string name="kakaotalk_client_inavailable">目前您的KakaoTalk版本过低或未安装，需要安装KakaoTalk才能使用</string>
    <string name="kakaostory_client_inavailable">目前您的KakaoStory版本过低或未安装，需要安装KakaoStory才能使用</string>
    <string name="whatsapp_client_inavailable">目前您的WhatsApp版本过低或未安装，需要安装WhatsApp才能使用</string>
    <string name="baidutieba_client_inavailable">目前您的百度贴吧版本过低或未安装，需要安装百度贴吧才能使用</string>
    <string name="laiwang_client_inavailable">目前您的来往版本过低或未安装，需要安装来往才能使用</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="qzone">QQ空间</string>
    <string name="wechat">微信好友</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="wechatfavorite">微信收藏</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="renren">人人网</string>
</resources>