<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/color_text_white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:id="@id/relayout1" android:background="@color/color_green" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <ImageButton android:id="@id/btn_back" android:background="@null" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/personal_setting" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="23.0sp" android:textColor="@color/color_text_white" android:id="@id/common_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ssid_title" android:layout_centerInParent="true" />
        <ImageView android:id="@id/btn_wifi" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/sign" android:background="@drawable/main_4btnbackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:background="@drawable/main_sign" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="14.0sp" android:textColor="@color/country_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/text_sign" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/near" android:background="@drawable/main_4btnbackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:background="@drawable/main_near" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="14.0sp" android:textColor="@color/country_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/text_near" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/message" android:background="@drawable/main_4btnbackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:background="@drawable/main_message" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="14.0sp" android:textColor="@color/country_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/text_message" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/share" android:background="@drawable/main_4btnbackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:background="@drawable/main_share" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="14.0sp" android:textColor="@color/country_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/text_share" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_gravity="center" android:id="@id/loading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/iv_page_inner_loading" android:background="@anim/lan_loading" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:textSize="18.0sp" android:textColor="@color/color_Radiobuttontext" android:layout_gravity="center_vertical" android:id="@id/tv_page_inner_loading_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/str_tv_loading_text" />
    </LinearLayout>
    <com.cat.list.XListView android:id="@id/wifi_lv" android:background="@drawable/list_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="70.0dip" android:layout_below="@id/relayout1" />
</RelativeLayout>